bugfix and aesthetical update
- fixed hiding/showing dashboard
- added beautiful scrollbar
- added newlines at end of files

--- a/VerkeerREST/web/sass/style.scss
+++ b/VerkeerREST/web/sass/style.scss
@@ -118,11 +118,6 @@ h2 {
 	.shadow {
 		left: $dashboard-width;
 	}
-
-	&.expand_collapse {
-		left: -($dashboard-width)+$settings-width;
-	}
-	
 }
 
 #map-container {
